# agentic-quest

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  start.sh
docs/superpowers/plans/: 2026-04-05-lifesim-mvp.md  2026-04-06-post-playtest-improvements.md
docs/superpowers/specs/: 2026-04-05-lifesim-design.md  2026-04-06-post-playtest-improvements.md
presets/fantasy/: achievements.json  preset.yaml  voice.md
presets/fantasy/companions/: cartographer.yaml  scholar.yaml  scout.yaml  tinker.yaml
presets/fantasy/generation/: item.prompt.j2  npc.prompt.j2  puzzle.prompt.j2  zone.prompt.j2
presets/fantasy/starter/crossroads/: narrative.md  zone.yaml
presets/fantasy/starter/crossroads/broken_signpost/: puzzle.yaml  solution_stub.py  validate.py
presets/fantasy/starter/crossroads/old_merchant/: npc.yaml
samples/: detective-noir.txt  endworld-sample.txt  fantasy-tavern.txt  space-station.txt
src/agentic_quest/: __init__.py  achievements.py  cli.py  consequences.py  generator.py  init.py  profile.py  state.py  validator.py
templates/: CLAUDE.md.j2
tests/: conftest.py  test_achievements.py  test_cli.py  test_consequences.py  test_e2e.py  test_generator.py  test_init.py  test_profile.py  test_state.py  test_validator.py
